Add `DistributionModel` implementation and integrate GraphDB dependencies